principal injection, filtering items belonging to user