@@ -3,11 +3,13 @@ package pl.kamil.chefscookbook.security;
 import lombok.AllArgsConstructor;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import pl.kamil.chefscookbook.user.domain.UserEntity;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Set;
 
 @AllArgsConstructor
 public class UserEntityDetails implements UserDetails {
@@ -16,7 +18,7 @@ public class UserEntityDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptySet();
+        return Set.of(new SimpleGrantedAuthority("USER"));
     }
 
     @Override
@@ -26,7 +28,7 @@ public class UserEntityDetails implements UserDetails {
 
     @Override
     public String getUsername() {
-        return entity.getUsername();
+        return entity.getId().toString();
     }
 
     @Override
